# translator

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
static/: index.html
tests/: test_translation.py
translate/: main.py  translation.py
