[tool.poetry]
name = "translate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
transformers = "^4.46.2"
pandas = "^2.2.3"
structlog = "^24.4.0"
pytest = "^8.3.3"
protobuf = "^5.28.3"
sentencepiece = "^0.2.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
langdetect = "^1.0.9"
langcodes = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
